@@ -244,10 +244,6 @@ fork_inferior (exec_file, allargs, env, traceme_fun, init_trace_fun)
      initialize anything target-vector-specific that needs initializing.  */
   (*init_trace_fun)(pid);
 
-#ifdef CREATE_INFERIOR_HOOK
-  CREATE_INFERIOR_HOOK (pid);
-#endif  
-
   /* The process was started by the fork that created it,
      but it will have stopped one instruction after execing the shell.
      Here we must get it up to actual execution of the real program.  */
